# bug-localization

./: .gitignore  pyproject.toml
bug_localization/: code_file.py  commit.py  frame.py  gather_data.py  get_changed_methods.py  issue_report_commit.py  project_frame.py  report.py  source_frame.py  utils.py
models/: baseline_classifiers.py  bug_localization.py  metrics.py  test.ipynb  top_k_classifier.py  utils.py
models/output/all reports/: diagnostic.txt  results.txt
models/output/all reports 2/: diagnostic.txt  results.txt
models/output/all reports 3/: diagnostic.txt  results.txt
models/output/skip error-free reports/: diagnostic.txt  results.txt
models/output/skip error-free reports 2/: diagnostic.txt  results.txt
models/output/skip error-free reports 3/: diagnostic.txt  results.txt
tests/: test_bug_localization.py  test_metrics.py
