[tool.poetry]
name = "bug-localization"
version = "0.1.0"
description = ""
authors = ["Veronika Ponizova <ponizova.v@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gitpython = "^3.1.8"
numpy = "^1.19.2"
pandas = "^1.1.3"
joblib = "^0.17.0"
tqdm = "^4.51.0"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
