[tool.poetry]
name = "bug-localization"
version = "0.1.0"
description = ""
authors = ["Veronika Ponizova <ponizova.v@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gitpython = "^3.1.8"
numpy = "1.19.3"
pandas = "^1.1.3"
joblib = "^0.17.0"
tqdm = "^4.51.0"
black = "^20.8b1"
pandas-profiling = "^2.9.0"
jupyter = "^1.0.0"
sklearn = "^0.0"
commoncode = "^20.10.20"
chardet = "^3.0.4"
nltk = "^3.5"
catboost = "^0.24.3"
hyperopt = "^0.2.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
